[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://tools/class_editor/game_resources/sprite.gd" type="Script" id=2]
[ext_resource path="res://tools/class_editor/components/class_item.gd" type="Script" id=3]
[ext_resource path="res://tools/class_editor/components/properties.gd" type="Script" id=4]
[ext_resource path="res://tools/class_editor/components/menu_button.gd" type="Script" id=5]

[node name="ClassItem" type="PanelContainer"]
margin_right = 251.0
margin_bottom = 116.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 4.0
margin_right = 243.0
margin_bottom = 112.0
size_flags_horizontal = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="PropertyDivider" type="HBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 231.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="IconDivider" type="VBoxContainer" parent="MarginContainer/PropertyDivider"]
margin_right = 105.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="ButtonsDivider" type="HBoxContainer" parent="MarginContainer/PropertyDivider/IconDivider"]
margin_right = 105.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ResourceName" type="LineEdit" parent="MarginContainer/PropertyDivider/IconDivider/ButtonsDivider"]
margin_right = 77.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ClassType"

[node name="MenuButton" type="MenuButton" parent="MarginContainer/PropertyDivider/IconDivider/ButtonsDivider"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 24.0
text = "..."
flat = false
align = 0
script = ExtResource( 5 )

[node name="Sprite" type="TextureRect" parent="MarginContainer/PropertyDivider/IconDivider"]
margin_top = 28.0
margin_right = 105.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="ImageDialog" type="FileDialog" parent="MarginContainer/PropertyDivider/IconDivider/Sprite"]
margin_right = 560.0
margin_bottom = 496.0
window_title = "Open a File"
resizable = true
dialog_text = "Select the GameResource' sprite"
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.png ; PNG Images" )
current_dir = "res://assets/sprites"
current_file = "icon.png"
current_path = "res://assets/sprites/icon.png"

[node name="Properties" type="GridContainer" parent="MarginContainer/PropertyDivider"]
margin_left = 121.0
margin_right = 227.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
