[gd_scene load_steps=5 format=2]

[ext_resource path="res://tools/class_editor/game_resources/sub_classes/spyglass_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/class_editor/game_resources/sprite.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/icon.png" type="Texture" id=3]
[ext_resource path="res://tools/class_editor/components/class_item.gd" type="Script" id=4]

[node name="CraftToolItem" instance=ExtResource( 1 )]
margin_right = 251.0
margin_bottom = 116.0
script = ExtResource( 4 )
class_scene = "res://game_objects/resources/tools/craft_tool.tscn"

[node name="MarginContainer" parent="." index="0"]
margin_left = 8.0
margin_top = 4.0
margin_right = 655.0
margin_bottom = 122.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="IconDivider" parent="MarginContainer" index="0"]
margin_left = 4.0
margin_top = 4.0
margin_right = 643.0
margin_bottom = 114.0
custom_constants/separation = 16

[node name="Sprite" parent="MarginContainer/IconDivider" index="0"]
margin_bottom = 110.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="ImageDialog" parent="MarginContainer/IconDivider/Sprite" index="0"]
margin_right = 560.0
margin_bottom = 496.0
window_title = "Open a File"
resizable = true
dialog_text = "Select the GameResource' sprite"
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.png ; PNG Images" )

[node name="TypeDivider" parent="MarginContainer/IconDivider" index="1"]
margin_right = 639.0
margin_bottom = 110.0
size_flags_horizontal = 3

[node name="ResourceName" parent="MarginContainer/IconDivider/TypeDivider" index="0"]
margin_right = 559.0
margin_bottom = 24.0
text = "CraftToolType"

[node name="PropertiesDivider" parent="MarginContainer/IconDivider/TypeDivider" index="1"]
margin_top = 44.0
margin_right = 559.0
margin_bottom = 110.0
custom_constants/separation = 10
script = null

[node name="CarryContainer" type="PanelContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider" index="0"]
margin_right = 183.0
margin_bottom = 66.0

[node name="Prop" type="VBoxContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/CarryContainer" index="0"]
margin_left = 8.0
margin_top = 4.0
margin_right = 175.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/CarryContainer/Prop" index="0"]
margin_right = 167.0
margin_bottom = 14.0
text = "how_many_can_be_carried"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/CarryContainer/Prop" index="1"]
margin_top = 34.0
margin_right = 167.0
margin_bottom = 58.0
value = 1.0
align = 2

[node name="AttackValueContainer" type="PanelContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider" index="3"]
margin_left = 375.0
margin_right = 469.0
margin_bottom = 66.0

[node name="Prop" type="VBoxContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AttackValueContainer" index="0"]
margin_left = 8.0
margin_top = 4.0
margin_right = 86.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AttackValueContainer/Prop" index="0"]
margin_right = 78.0
margin_bottom = 14.0
text = "attack_value"

[node name="SpinBox" type="SpinBox" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AttackValueContainer/Prop" index="1"]
margin_top = 34.0
margin_right = 78.0
margin_bottom = 58.0
step = 0.1
value = 2.0
allow_greater = true
align = 2

[node name="AnimationContainer" type="PanelContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider" index="4"]
margin_left = 479.0
margin_right = 559.0
margin_bottom = 66.0

[node name="Prop" type="VBoxContainer" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AnimationContainer" index="0"]
margin_left = 8.0
margin_top = 4.0
margin_right = 72.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AnimationContainer/Prop" index="0"]
margin_right = 64.0
margin_bottom = 14.0
text = "animation"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/IconDivider/TypeDivider/PropertiesDivider/AnimationContainer/Prop" index="1"]
margin_top = 34.0
margin_right = 64.0
margin_bottom = 54.0
text = "none"
align = 2
